corregir swagger de station
